--- a/src/scss/_maps.scss
+++ b/src/scss/_maps.scss
@@ -1,9 +1,10 @@
 $colors: (
-  background-color: #F0F0F0,
-  main-color: #e9e8e6,
+  background-color: #f6f6f6,
+  main-color: #f0f0f0,
   accent-color: #66A3BB,
+  font-color: #242424,
   font-second-color: #534333,
 );
 
 $font-heading: "Oswald", sans-serif;
-$font-text: "Ubuntu", sans-serif;
+$font-text: "Mohave", sans-serif;
