--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,11 +1,98 @@
 @use  "sass:map";
 
+.about {
+  padding: 15vh 5vw 3vh 5vw;
+  text-align: center;
 
+  &_heading {
+    @include heading;
+  }
+
+  &_paragraph {
+    padding-top: 5vh;
+    font-size: 1.3vw;
+    text-align: justify;
+    font-family: $font-text;
+    font-weight: 300;
+
+    &--withIcon {
+      text-align: center;
+      font-size: 1vw;
+    }
+  }
+
+  &_points {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4vw;
+    grid-auto-rows: minmax(100px, auto);
+    padding: 5vh 12vw 0 12vw;
+  }
+
+  span {
+    color: red;
+  }
+
+  .icon {
+    font-size: 2.5vw;
+    color: map.get($colors, accent-color);
+  }
+}
 
 @media (max-width: 792px) {
-
+  .about {
+      padding: 5rem 2.5rem 3rem 2.5rem;
+      text-align: center;
+  
+      &_heading {
+        @include mobileHeading;
+        padding-bottom: 2rem;
+      }
+  
+      &_paragraph {
+        text-align: justify;
+        font-family: $font-text;
+        line-height: 1.6rem;
+        font-size: 1rem;
+        font-weight: 300;
+  
+        &--withIcon {
+          text-align: center;
+        }
+      }
+  
+      &_points {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 3rem;
+        padding: 3rem 2rem;
+      }
+  
+      span {
+        color: red;
+      }
+  
+      .icon {
+        font-size: 1.5rem;
+        color: map.get($colors, accent-color);
+      }
+    }
 }
 
 @media (min-width: 792px) and (max-width: 1100px) {
+  .about {
+    padding: 5rem 5rem 3rem 5rem;
 
+    &_paragraph {
+      font-size: 1.3rem;
+      line-height: 2.5rem;
+
+      &--withIcon {
+        line-height: 2.1rem;
+      }
+    }
+
+    &_points {
+      padding: 6rem 0;
+    }
+  }
 }
