--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -11,8 +11,12 @@
 
 ::-webkit-scrollbar-thumb {
   background-color: map.get($colors, accent-color);
-  border-radius: 20px;
+  border-radius: 10px;
   border: 3px solid map.get($colors, background-color);
+}
+
+::-webkit-scrollbar:horizontal {
+  display: none;
 }
 
 html {
