--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,11 +1,22 @@
 @use "sass:map";
 
-
+.footer {
+  text-align: center;
+  background-color: map.get($colors, main-color);
+  padding: 2vh 0;
+  font-size: 1vw;
+  font-family: $font-text;
+  border-top: 2px solid #b7b1ab;
+}
 
 @media (max-width: 792px) {
-
+  .footer {
+      font-size: .8rem;
+  }
 }
 
 @media (min-width: 792px) and (max-width: 1100px) {
-
+  .footer {
+    font-size: .9rem;
+  }
 }
