--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -14,35 +14,30 @@
 
       .text {
         @include text;
-        padding-bottom: .5rem;
         font-weight: 300;
       }
 
       .input-fields {
         box-sizing: border-box;
         width: 50vw;
-        background-color: map.get($colors, main-color);
-        border: 2px solid #b7b1ab;
-        border-radius: 15px;
+        background-color: #EFEFEF;
+        border: 1px solid map.get($colors, font-color);
+        border-radius: 5px;
         padding: 1rem;
-        color: map.get($colors, font-second-color);
-
-        &::placeholder {
-          color: map.get($colors, font-second-color);
-          font-family: $font-text;
-        }
+        color: map.get($colors, font-color);
 
         &--one {
           height: 2.5rem;
-          margin-bottom: 2rem;
+          margin-bottom: 3vh;
         }
 
         &--two {
-          height: 14rem;
+          height: 25vh;
         }
 
         &:focus {
-          border: 2px solid map.get($colors, font-second-color);
+          border: 2px solid map.get($colors, font-color);
+          background-color: #D9D9D9;
         }
 
         resize: none;
@@ -52,7 +47,7 @@
 
   .submit {
     @include btn;
-    margin-top: 2rem;
+    margin-top: 3vh;
     align-self: flex-end;
   }
 
