--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,25 +1,31 @@
 @use "sass:map";
 
 @mixin btn {
-  font-size: 1.5rem;
-  padding: 1rem 2rem;
-  border: 3px solid map.get($colors, accent-color);
-  border-radius: 2rem;
+  text-decoration: none;
+  font-size: 1.1vw;
+  padding: 1.5vh 2vw;
+  border: 2px solid map.get($colors, accent-color);
+  border-radius: 8px;
   color: map.get($colors, background-color);
   font-family: $font-text;
+  font-weight: 600;
   letter-spacing: .1rem;
   background-color: map.get($colors, accent-color);
 
   &:hover {
-    border: 3px solid map.get($colors, font-second-color);
+    box-shadow: 0 3px 6px map.get($colors, font-second-color);
+  }
+
+  &:active {
+    border: 2px solid map.get($colors, font-second-color);
   }
 }
 
 @mixin heading {
   font-family: $font-heading;
-  font-size: 3.5rem;
-  padding-bottom: 5rem;
-  letter-spacing: .2rem;
+  font-size: 2vw;
+  text-decoration: underline map.get($colors, accent-color) 3px;
+  text-underline-offset: 1vh;
 }
 
 @mixin mobileHeading {
@@ -33,9 +39,7 @@
 // TEXT //
 
 @mixin text {
-  font-size: 1.4rem;
+  font-size: 1.3vw;
   font-weight: normal;
   font-family: $font-text;
-  line-height: 1.5rem;
-  letter-spacing: 0.1rem;
 }
