--- a/src/scss/_maps.scss
+++ b/src/scss/_maps.scss
@@ -6,5 +6,5 @@ $colors: (
   font-second-color: #534333,
 );
 
-$font-heading: "Oswald", sans-serif;
-$font-text: "Mohave", sans-serif;
+$font-heading: 'Montserrat', sans-serif;
+$font-text: 'Montserrat', sans-serif;
