--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -18,6 +18,7 @@
     &--withIcon {
       text-align: center;
       font-size: 1vw;
+      padding-top: 3vh;
     }
   }
 
@@ -34,8 +35,7 @@
   }
 
   .icon {
-    font-size: 2.5vw;
-    color: map.get($colors, accent-color);
+    height: 8vh;
   }
 }
 
