--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -16,8 +16,9 @@
 
     &--name {
       @include heading;
+      font-size: 1.5vw;
       padding-bottom: 1vh;
-      font-weight: 500;
+      font-weight: 400;
       text-decoration: none;
       font-family: $font-text;
     }
@@ -25,6 +26,7 @@
     &--nip {
       font-size: 1.3vw;
       padding-bottom: 10vh;
+      font-weight: 300;
     }
 
     &--details {
@@ -47,20 +49,30 @@
       border-bottom: 3px solid transparent;
       padding-top: 3px;
       margin-left: 1.5rem;
-      font-weight: 400;
+      font-weight: 300;
 
       &:hover {
-        border-bottom: 3px solid map.get($colors, accent-color);
+        font-weight: 500;
       }
 
       &:active {
-        border-bottom: 3px solid map.get($colors, font-second-color);
+        font-weight: 100;
       }
     }
 
     .icon {
-      font-size: 2rem;
-      color: map.get($colors, accent-color);
+      height: 6vh;
+    }
+
+    .phone-numbers {
+      // display: flex;
+      // flex-direction: column;
+      margin-left: 1.5rem;
+      
+      &_number {
+        text-decoration: none;
+        color: map.get($colors, font-color);
+      }
     }
   }
 }
@@ -104,23 +116,26 @@
 
       &--link {
         font-size: 1rem;
-        border: 2px solid map.get($colors, accent-color);
         border-radius: 30px;
         padding: 5px 20px;
         margin: 0;
-
-      &:hover {
-        border: 2px solid map.get($colors, accent-color);
       }
 
-        &:active {
-          border: 2px solid map.get($colors, font-second-color);
-        }
+      .insta-link {
+        padding: none;
+        border-radius: none;
+
       }
 
       .icon {
         margin-bottom: 1rem;
         font-size: 1.5rem;
+      }
+
+      .phone-numbers {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
       }
     }
   }
