--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -6,7 +6,7 @@
   padding: 2vh 0;
   font-size: 1vw;
   font-family: $font-text;
-  border-top: 2px solid #b7b1ab;
+  border-top: 1px solid map.get($colors, font-color);
 }
 
 @media (max-width: 792px) {
