--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -6,7 +6,10 @@
   left: 0;
   right: 0;
   top: 0;
-  background-color: map.get($colors, background-color);
+  z-index: 1;
+  background: linear-gradient(to bottom, map.get($colors, background-color), transparent);
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
 
   .navigation {
     display: flex;
@@ -53,7 +56,6 @@
         font-family: $font-text;
         font-weight: 600;
         letter-spacing: .1rem;
-        // background-color: map.get($colors, accent-color);
 
         &:hover {
           color: map.get($colors, background-color);
