--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 
 .landing {
-  padding: 16vh 1vw 10rem 1vw;
+  padding: 17vh 1vw 5vh 1vw;
   text-align: center;
   color: map.get($colors, font-color);
 
@@ -9,7 +9,7 @@
     @include heading;
     font-size: 2.8vw;
     font-weight: 500;
-    padding-bottom: 0;
+    padding-bottom: 1vh;
     letter-spacing: .6vw;
     color: map.get($colors, accent-color);
     background-color: #1e7fa8;
@@ -25,7 +25,7 @@
   &_heading-two {
     @include heading;
     font-size: 1.8vw;
-    padding-bottom: 0;
+    padding-bottom: 2vh;
     color: map.get($colors, font-color);
     text-decoration: none;
     letter-spacing: .4vw;
@@ -36,20 +36,20 @@
     display: flex;
     align-items: center;
     gap: 3vw;
-    padding: 6vh 0;
+    padding: 5vh 0 8vh 0;
     overflow-x: scroll;
     margin: 0 auto;
 
     &--container {
-      height: 35vh;
-      width: 13vw;
+      height: 55vh;
+      width: 20vw;
       object-fit: cover;
     }
   }
 
   &_paragraph {
     font-size: 1.4vw;
-    padding-bottom: 4vh;
+    padding-bottom: 5vh;
     font-family: $font-text;
     font-weight: 300;
     line-height: 4vh;
