--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,5 +1,8 @@
 @use "sass:map";
 
+
+// CTA //
+
 @mixin btn {
   text-decoration: none;
   font-size: 1vw;
@@ -13,17 +16,18 @@
   background-color: map.get($colors, accent-color);
 
   &:hover {
-    // box-shadow: 0 3px 6px map.get($colors, font-second-color);
     color: map.get($colors, accent-color);
     background-color: map.get($colors, background-color);
   }
 
   &:active {
-    // border: 2px solid map.get($colors, font-second-color);
     color: map.get($colors, background-color);
     background-color: map.get($colors, accent-color);  
   }
 }
+
+
+// HEADING //
 
 @mixin heading {
   font-family: $font-heading;
