--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -41,41 +41,33 @@
 
 @media (max-width: 792px) {
   .about {
-      padding: 5rem 2.5rem 3rem 2.5rem;
-      text-align: center;
+    padding: 12vh 5vw 3vh 5vw;
+    text-align: center;
   
-      &_heading {
-        @include mobileHeading;
-        padding-bottom: 2rem;
-      }
+    &_heading {
+      @include mobileHeading;
+    }
   
-      &_paragraph {
-        text-align: justify;
-        font-family: $font-text;
-        line-height: 1.6rem;
-        font-size: 1rem;
-        font-weight: 300;
+    &_paragraph {
+      padding-top: 0;
+      font-size: 3.5vw;
+      text-align: justify;
+      font-family: $font-text;
+      font-weight: 300;
   
-        &--withIcon {
-          text-align: center;
-        }
-      }
-  
-      &_points {
-        grid-template-columns: repeat(1, 1fr);
-        gap: 3rem;
-        padding: 3rem 2rem;
-      }
-  
-      span {
-        color: red;
-      }
-  
-      .icon {
-        font-size: 1.5rem;
-        color: map.get($colors, accent-color);
+      &--withIcon {
+        text-align: center;
+        font-size: 3.5vw;
+        padding: 3vh 0 5vh 0;
       }
     }
+  
+    &_points {
+      display: flex;
+      flex-direction: column;
+      padding: 7vh 12vw 3vh 12vw;
+    }
+  }
 }
 
 @media (min-width: 792px) and (max-width: 1100px) {
