--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -29,7 +29,6 @@
     color: map.get($colors, font-color);
     text-decoration: none;
     letter-spacing: .4vw;
-
   }
 
   &_carousel {
@@ -63,25 +62,47 @@
 
 @media (max-width: 792px) {
   .landing {
-      padding: 8rem 2rem 0 2rem;
+      padding: 12vh 5vw 0 5vw;
       text-align: center;
   
-      &_heading {
+      &_heading-one {
+        font-size: 9vw;
+        padding-bottom: 1vh;
+        font-family: $font-heading;
+        letter-spacing: .2rem;      
+      }
+
+      &_heading-two {
         @include mobileHeading;
-        font-size: 2.5rem;
-        padding-bottom: 2rem;
+        padding-bottom: 0;
+        text-decoration: none;
+      }
+
+      &_carousel {
+        display: flex;
+        align-items: center;
+        gap: 3vw;
+        padding: 5vh 0 5vh 0;
+        overflow-x: scroll;
+        margin: 0 auto;
+    
+        &--container {
+          height: 45vh;
+          width: 60vw;
+          object-fit: cover;
+        }
       }
   
       &_paragraph {
-        font-size: 1.1rem;
-        padding-bottom: 4rem;
-        line-height: 2rem;
+        font-size: 4vw;
+        padding-bottom: 4vh;
       }
   
       &_button {
-        font-size: 1.1rem;
+        font-size: 4vw;
         padding: .8rem 1.8rem;
         text-decoration: none;
+        font-weight: 500;
       }
     }
 }
