--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -38,9 +38,12 @@
 
 @mixin mobileHeading {
   font-family: $font-heading;
-  font-size: 2.2rem;
-  padding-bottom: 4rem;
+  font-size: 5vw;
+  padding-bottom: 4vh;
   letter-spacing: .2rem;
+  text-decoration: underline map.get($colors, accent-color) 2px;
+  text-underline-offset: 1vh;
+  font-weight: 400;
 }
 
 
