--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -48,6 +48,103 @@
     }
 }
 
+@media (max-width: 792px) {
+    .services {
+        padding: 12vh 5vw 0 5vw;
+        text-align: center;
+        font-family: $font-text;
+        font-weight: 300;
+    
+        &_heading {
+            @include mobileHeading;
+        }
+    
+        &_info {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 9vw;
+            grid-auto-rows: minmax(100px, auto);
+            padding: 5vh 5vw 0 5vw;
+    
+            &--detailes {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: left;
+    
+                .img {
+                    height: 7vh;
+                }
+    
+                .title {
+                    font-size: 4vw;
+                    padding: 3vh 0;
+                    text-decoration: underline map.get($colors, accent-color) 1px;
+                    text-underline-offset: .5vh;
+                }
+    
+                .list {
+                    font-size: 3.5vw;
+                    padding-bottom: 5vh;
+                }
+            }
+        }
+    
+        &_additional {
+            padding-top: 3vh;
+            font-size: 3.5vw;
+            text-align: justify;
+        }
+    }
+}
+
 @media (min-width: 792px) and (max-width: 1100px) {
+    .services {
+        padding: 15vh 5vw 3vh 5vw;
+        text-align: center;
+        font-family: $font-text;
+        font-weight: 300;
+    
+        &_heading {
+            @include heading;
+            padding-bottom: 5vh;
+            font-weight: 400;
+        }
+    
+        &_info {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 6vw;
+            grid-auto-rows: minmax(100px, auto);
+            padding: 5vh 5vw 0 5vw;
+    
+            &--detailes {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: left;
+    
+                .img {
+                    height: 7vh;
+                }
+    
+                .title {
+                    font-size: 1.4vw;
+                    padding: 3vh 0;
+                    text-decoration: underline map.get($colors, accent-color) 2px;
+                    text-underline-offset: 1vh;
+                }
+    
+                .list {
+                    font-size: 1.2vw;
+                }
+            }
+        }
+    
+        &_additional {
+            padding-top: 10vh;
+            font-size: 1.2vw;
+        }
+    }
 
 }
