--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -11,12 +11,12 @@
 
 @media (max-width: 792px) {
   .footer {
-      font-size: .8rem;
+      font-size: 3vw;
   }
 }
 
 @media (min-width: 792px) and (max-width: 1100px) {
   .footer {
-    font-size: .9rem;
+    font-size: 3.5VW;
   }
 }
