--- a/src/scss/_gallery.scss
+++ b/src/scss/_gallery.scss
@@ -17,7 +17,19 @@
 }
 
 @media (max-width: 792px) {
+    .gallery {
+        display: flex;
+        flex-direction: column;
+        padding: 13vh 5vw 10vh 5vw;
 
+        &_photo {
+            width: 90vw;
+            height: 60vh;
+            object-fit: cover;
+            padding: 8px;
+            border: 1px solid map.get($colors,accent-color);
+        }
+    }
 }
 
 @media (min-width: 792px) and (max-width: 1100px) {
