--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -62,11 +62,11 @@
 
 @media (max-width: 792px) {
   .landing {
-      padding: 12vh 5vw 0 5vw;
+      padding: 13vh 5vw 0 5vw;
       text-align: center;
   
       &_heading-one {
-        font-size: 9vw;
+        font-size: 10vw;
         padding-bottom: 1vh;
         font-family: $font-heading;
         letter-spacing: .2rem;      
@@ -96,13 +96,11 @@
       &_paragraph {
         font-size: 4vw;
         padding-bottom: 4vh;
+        // text-align: justify;
       }
   
       &_button {
-        font-size: 4vw;
-        padding: .8rem 1.8rem;
-        text-decoration: none;
-        font-weight: 500;
+        @include mobileBtn;
       }
     }
 }
