--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -41,7 +41,7 @@
       font-weight: 300;
     }
 
-    &--paragraph {
+    &--mail {
       font-size: 1.3vw;
       margin-left: 1.5rem;
     }
@@ -119,7 +119,7 @@
         padding-bottom: 7vh;
       }
   
-      &--paragraph {
+      &--mail {
         font-size: 4vw;
         margin-left: 0;
       }
