--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -69,7 +69,8 @@
         font-size: 10vw;
         padding-bottom: 1vh;
         font-family: $font-heading;
-        letter-spacing: .2rem;      
+        letter-spacing: .2rem;   
+        text-decoration: none   
       }
 
       &_heading-two {
