--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -6,7 +6,8 @@
   color: map.get($colors, font-color);
 
   &_heading-one {
-    @include heading;
+    font-family: $font-heading;
+    font-size: 1.9vw;  
     font-size: 2.8vw;
     font-weight: 500;
     padding-bottom: 1vh;
@@ -19,15 +20,14 @@
     -moz-background-clip: text;
     background-clip: text;
     line-height: 7vh;
-    text-decoration: none;
   }
 
   &_heading-two {
-    @include heading;
+    font-family: $font-heading;
+    font-size: 1.9vw;  
     font-size: 1.8vw;
     padding-bottom: 2vh;
     color: map.get($colors, font-color);
-    text-decoration: none;
     letter-spacing: .4vw;
   }
 
