--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -29,7 +29,7 @@
     padding-bottom: 2vh;
     color: map.get($colors, font-color);
     letter-spacing: .4vw;
-  }
+    }
 
   &_carousel {
     display: flex;
@@ -62,7 +62,7 @@
 
 @media (max-width: 792px) {
   .landing {
-      padding: 13vh 5vw 0 5vw;
+      padding: 13vh 5vw 5vh 5vw;
       text-align: center;
   
       &_heading-one {
@@ -76,7 +76,7 @@
       &_heading-two {
         @include mobileHeading;
         padding-bottom: 0;
-        text-decoration: none;
+        border-bottom: none;
       }
 
       &_carousel {
