--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -8,8 +8,6 @@
 
     &_heading {
         @include heading;
-        padding-bottom: 5vh;
-        font-weight: 400;
     }
 
     &_info {
@@ -17,7 +15,7 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 6vw;
         grid-auto-rows: minmax(100px, auto);
-        padding: 5vh 5vw 0 5vw;
+        padding: 10vh 5vw 0 5vw;
 
         &--detailes {
             display: flex;
@@ -32,7 +30,7 @@
             .title {
                 font-size: 1.4vw;
                 padding: 3vh 0;
-                text-decoration: underline map.get($colors, accent-color) 2px;
+                border-bottom: 2px solid map.get($colors, accent-color);
                 text-underline-offset: 1vh;
             }
 
@@ -64,7 +62,7 @@
             grid-template-columns: repeat(1, 1fr);
             gap: 9vw;
             grid-auto-rows: minmax(100px, auto);
-            padding: 5vh 5vw 0 5vw;
+            padding: 10vh 5vw 0 5vw;
     
             &--detailes {
                 display: flex;
@@ -78,14 +76,13 @@
     
                 .title {
                     font-size: 4vw;
-                    padding: 3vh 0;
-                    text-decoration: underline map.get($colors, accent-color) 1px;
-                    text-underline-offset: .5vh;
+                    padding: 3vh 0 0 0;
+                    border-bottom: 1px solid map.get($colors, accent-color);
                 }
     
                 .list {
                     font-size: 3.5vw;
-                    padding-bottom: 5vh;
+                    padding: 3vh 0 5vh 0;
                 }
             }
         }
