--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -29,13 +29,14 @@
 
             .title {
                 font-size: 1.4vw;
-                padding: 3vh 0;
+                padding: 3vh 0 0 0;
                 border-bottom: 2px solid map.get($colors, accent-color);
                 text-underline-offset: 1vh;
             }
 
             .list {
                 font-size: 1.2vw;
+                padding-top: 3.5vh;
             }
         }
     }
