implementing infinite scrolling carousel, grammar and styles fixes

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -81,6 +81,7 @@
       &_number {
         text-decoration: none;
         color: map.get($colors, font-color);
+        font-size: 1.3vw;
       }
     }
   }
