carousel loop fix, menu gradient transition fix, new routes instead of one page

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -169,31 +169,31 @@
   }
 }
 
-@media (min-width: 792px) and (max-width: 1100px) {
-  .contact {
-    &_information {
-      margin: 0 3rem;
+// @media (min-width: 792px) and (max-width: 1100px) {
+//   .contact {
+//     &_information {
+//       margin: 0 3rem;
 
-      &--name {
-        font-size: 3rem;
-        line-height: 2.8rem;
-      }
+//       &--name {
+//         font-size: 3rem;
+//         line-height: 2.8rem;
+//       }
 
-      &--nip {
-        font-size: 1.4rem;
-      }
+//       &--nip {
+//         font-size: 1.4rem;
+//       }
 
-      &--details {
-        padding-bottom: 2rem;
-      }
+//       &--details {
+//         padding-bottom: 2rem;
+//       }
 
-      &--paragraph {
-        font-size: 1.3rem;
-      }
+//       &--paragraph {
+//         font-size: 1.3rem;
+//       }
 
-      .icon {
-        font-size: 1.8rem;
-      }
-    }
-  }
-}
+//       .icon {
+//         font-size: 1.8rem;
+//       }
+//     }
+//   }
+// }
