--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -114,24 +114,24 @@
   }
 }
 
-@media (min-width: 792px) and (max-width: 1100px) {
+// @media (min-width: 792px) and (max-width: 1100px) {
 
-  .form {
-    .submit {
-      font-size: 1.5rem;
-      padding: .8rem 1.8rem;
-    }
+//   .form {
+//     .submit {
+//       font-size: 1.5rem;
+//       padding: .8rem 1.8rem;
+//     }
 
-    .positive {
-      padding: .7rem 1.8rem;
-    }
+//     .positive {
+//       padding: .7rem 1.8rem;
+//     }
 
-    .negative {
-      padding: .7rem 1.8rem;
-    }
-  }
+//     .negative {
+//       padding: .7rem 1.8rem;
+//     }
+//   }
 
-  .grecaptcha-badge {
-    opacity: 0;
-  }
-}
+//   .grecaptcha-badge {
+//     opacity: 0;
+//   }
+// }
