--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,7 +1,7 @@
 @use  "sass:map";
 
 .about {
-  padding: 15vh 5vw 3vh 5vw;
+  padding: 15vh 5vw 12vh 5vw;
   text-align: center;
 
   &_heading {
@@ -79,21 +79,21 @@
   }
 }
 
-@media (min-width: 792px) and (max-width: 1100px) {
-  .about {
-    padding: 5rem 5rem 3rem 5rem;
+// @media (min-width: 792px) and (max-width: 1100px) {
+//   .about {
+//     padding: 5rem 5rem 3rem 5rem;
 
-    &_paragraph {
-      font-size: 1.3rem;
-      line-height: 2.5rem;
+//     &_paragraph {
+//       font-size: 1.3rem;
+//       line-height: 2.5rem;
 
-      &--withIcon {
-        line-height: 2.1rem;
-      }
-    }
+//       &--withIcon {
+//         line-height: 2.1rem;
+//       }
+//     }
 
-    &_points {
-      padding: 6rem 0;
-    }
-  }
-}
+//     &_points {
+//       padding: 6rem 0;
+//     }
+//   }
+// }
