--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -15,8 +15,8 @@
   }
 }
 
-@media (min-width: 792px) and (max-width: 1100px) {
-  .footer {
-    font-size: 3.5VW;
-  }
-}
+// @media (min-width: 792px) and (max-width: 1100px) {
+//   .footer {
+//     font-size: 3.5VW;
+//   }
+// }
