--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -64,6 +64,12 @@
   padding: 17vh 1vw 5vh 1vw;
   text-align: center;
   color: map.get($colors, font-color);
+  position: relative;
+  overflow: hidden;
+
+  .mobile {
+    display: none;
+  }
 
   &_heading-one {
     font-family: $font-heading;
@@ -86,44 +92,52 @@
     font-family: $font-heading;
     font-size: 1.9vw;  
     font-size: 1.8vw;
-    padding-bottom: 2vh;
+    padding-bottom: 45vh;
     color: map.get($colors, font-color);
     letter-spacing: .4vw;
   }
 
-  .landing_carousel [data-animated="true"],
-  .landing_carousel--inner {
-    width: max-content;
-    animation: scroll var(--_animation-duration, 40s)
-      var(--_animation-direction, forwards) linear infinite;
-  }
+  &_carousel {
+    height: 60vh;
+    margin: auto;
+    position: absolute;
+    top: 32%;
 
-  .landing_carousel [data-animated="true"]{
-    overflow: hidden;
-  }
-
-  .landing_carousel {
-    overflow: hidden;
-    margin-bottom: 5vh;
-
+    
     &--inner {
-      padding-block: 1rem;
       display: flex;
-      gap: 2vw;
+      animation: scroll 40s linear infinite;
+      align-items: center;
+
+      // &:hover {
+      //   animation-play-state: paused;
+      // }
     }
 
-    &--container {
-      height: 60vh;
-      width: 22vw;
-      object-fit: cover;
+    &--image {
+      height: 42vh;
+      width: 17vw;
+      perspective: 5vw;
+      display: flex;
+      padding: 15px;
+    }
+
+    img {
+      width: 100%;
+      // transition: transform 1s;
+
+      // &:hover {
+      //   transform: translateZ(30px);
+      // }
+    }
+
+    @keyframes scroll {
+      to {
+        transform: translate(calc(-50% - .1vw));
+      }
     }
   }
 
-  @keyframes scroll {
-    to {
-      transform: translate(calc(-50% - 0.5rem));
-    }
-  }
 
   &_paragraph {
     font-size: 1.4vw;
@@ -144,6 +158,15 @@
   .landing {
       padding: 13vh 5vw 5vh 5vw;
       text-align: center;
+      position: static;
+
+      .laptop {
+        display: none;
+      }
+
+      .mobile {
+        display: flex;
+      }
   
       &_heading-one {
         font-size: 10vw;
@@ -165,9 +188,14 @@
         gap: 3vw;
         padding: 5vh 0 5vh 0;
         overflow-x: scroll;
-        margin: 0 auto;
-    
-        &--container {
+        position: static;
+        height: auto;
+
+        &--inner {
+          display: block;
+        }
+
+        img {
           height: 45vh;
           width: 60vw;
           object-fit: cover;
@@ -177,7 +205,6 @@
       &_paragraph {
         font-size: 4vw;
         padding-bottom: 4vh;
-        // text-align: justify;
       }
   
       &_button {
@@ -186,22 +213,22 @@
     }
 }
 
-@media (min-width: 792px) and (max-width: 1100px) {
-  .landing {
-    padding: 9rem 4rem 0 4rem;
+// @media (min-width: 792px) and (max-width: 1100px) {
+//   .landing {
+//     padding: 9rem 4rem 0 4rem;
 
-    &_heading {
-      font-size: 4.5rem;
-    }
+//     &_heading {
+//       font-size: 4.5rem;
+//     }
 
-    &_paragraph {
-      font-size: 1.7rem;
-      line-height: 2.7rem;
-    }
+//     &_paragraph {
+//       font-size: 1.7rem;
+//       line-height: 2.7rem;
+//     }
 
-    &_button {
-      font-size: 1.5rem;
-      padding: .8rem 1.8rem;
-    }
-  }
-}
+//     &_button {
+//       font-size: 1.5rem;
+//       padding: .8rem 1.8rem;
+//     }
+//   }
+// }
