--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -62,6 +62,7 @@
 @mixin heading {
   font-family: $font-heading;
   font-size: 1.9vw;
+  font-weight: 400;
   border-bottom: 3px solid map.get($colors, accent-color);
 }
 
