--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 
 .services {
-    padding: 15vh 5vw 3vh 5vw;
+    padding: 17vh 5vw 12vh 5vw;
     text-align: center;
     font-family: $font-text;
     font-weight: 300;
@@ -15,7 +15,7 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 9vw;
         grid-auto-rows: minmax(100px, auto);
-        padding: 10vh 5vw 0 5vw;
+        padding: 15vh 5vw 0 5vw;
 
         &--detailes {
             display: flex;
@@ -96,53 +96,53 @@
     }
 }
 
-@media (min-width: 792px) and (max-width: 1100px) {
-    .services {
-        padding: 15vh 5vw 3vh 5vw;
-        text-align: center;
-        font-family: $font-text;
-        font-weight: 300;
+// @media (min-width: 792px) and (max-width: 1100px) {
+//     .services {
+//         padding: 15vh 5vw 3vh 5vw;
+//         text-align: center;
+//         font-family: $font-text;
+//         font-weight: 300;
     
-        &_heading {
-            @include heading;
-            padding-bottom: 5vh;
-            font-weight: 400;
-        }
+//         &_heading {
+//             @include heading;
+//             padding-bottom: 5vh;
+//             font-weight: 400;
+//         }
     
-        &_info {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 6vw;
-            grid-auto-rows: minmax(100px, auto);
-            padding: 5vh 5vw 0 5vw;
+//         &_info {
+//             display: grid;
+//             grid-template-columns: repeat(3, 1fr);
+//             gap: 6vw;
+//             grid-auto-rows: minmax(100px, auto);
+//             padding: 5vh 5vw 0 5vw;
     
-            &--detailes {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: left;
+//             &--detailes {
+//                 display: flex;
+//                 flex-direction: column;
+//                 align-items: center;
+//                 justify-content: left;
     
-                .img {
-                    height: 7vh;
-                }
+//                 .img {
+//                     height: 7vh;
+//                 }
     
-                .title {
-                    font-size: 1.4vw;
-                    padding: 3vh 0;
-                    text-decoration: underline map.get($colors, accent-color) 2px;
-                    text-underline-offset: 1vh;
-                }
+//                 .title {
+//                     font-size: 1.4vw;
+//                     padding: 3vh 0;
+//                     text-decoration: underline map.get($colors, accent-color) 2px;
+//                     text-underline-offset: 1vh;
+//                 }
     
-                .list {
-                    font-size: 1.2vw;
-                }
-            }
-        }
+//                 .list {
+//                     font-size: 1.2vw;
+//                 }
+//             }
+//         }
     
-        &_additional {
-            padding-top: 10vh;
-            font-size: 1.2vw;
-        }
-    }
+//         &_additional {
+//             padding-top: 10vh;
+//             font-size: 1.2vw;
+//         }
+//     }
 
-}
+// }
