--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -83,7 +83,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-
+      
       .icon {
         font-size: 5vh;
         align-self: center;
@@ -92,6 +92,7 @@
       .navigation {
         border-top: 2px solid map.get($colors, accent-color);
         background-color: map.get($colors, background-color);
+        opacity: 90%;
         flex-direction: column;
         align-items: center;
         position: absolute;
@@ -112,7 +113,7 @@
         &_main-nav{
           flex-direction: column;
           align-items: center;
-          gap: 4vh;
+          gap: 4vh;  
 
           &--link {
             font-size: 3.5vw;
@@ -134,6 +135,8 @@
             letter-spacing: .1rem;    
           }
         }
+
+
       }
     }
   }
