--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -46,7 +46,7 @@
     
     &--inner {
       display: flex;
-      animation: scroll 45s linear infinite;
+      animation: scroll 40s linear infinite;
       align-items: center;
 
       &:hover {
@@ -59,23 +59,20 @@
       width: 17vw;
       perspective: 5vw;
       display: flex;
-      padding: 15px 15px;
-      transition: transform 1s;
+      padding: 15px;
+      -webkit-transition: all 1s ease-in-out;
+      -moz-transition: all 1s ease-in-out;
+      -o-transition: all 1s ease-in-out;
+      transition: all 1s ease-in-out;
 
       &:hover {
-        margin: 0 30px;
+        margin: 0 40px;
         transform: scale(1.5);
       }
     }
 
     img {
       width: 100%;
-      // transition: transform 1s;
-
-      // &:hover {
-      //   transform: scale(1.7);
-      //   z-index: 9999999;
-      // }
     }
 
     @keyframes scroll {
